# sha-metal

./: Cargo.toml  README.md
go-cuda/: CMakeLists.txt  cracker.cu  cracker.h  go.mod  main.go  sha1_kernel.cu
rust-metal/: build.rs
rust-metal/src/: main.rs
src/: main.rs  metal_bridge.m  sha1.metal
